# gst-plugins-bad

ext/rtmp/: gstrtmpsink.c  meson.build
